<resources>
    <string name="app_name">Bachat</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="add_customer">Add Customer</string>
    <string name="search_customers">Search customers…</string>
    <string name="customer_name">Customer Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="balance">Balance: ₹%.2f</string>
    <string name="call_us">Call Us</string>
    <string name="text_us">Text Us</string>
    <string name="v_0_1_5">v 0.1.5</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_time">Transaction Time</string>
    <string name="day_of_transaction">Day Of Transaction</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="call">Call</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="delete_all_transactions">Delete All Transactions</string>
    <string name="net_amount">Net Amount:</string>
    <string name="please_enter_amount">Please enter an amount</string>
    <string name="transaction_added">Transaction added</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="save">Save</string>
    <string name="transaction_updated">Transaction updated</string>
    <string name="no_phone_number">No phone number</string>
    <string name="edit_phone">Edit Phone Number</string>
    <string name="phone_updated">Phone Number Updated</string>
    <string name="delete_all_transactions_confirmation">Are you sure you want to delete all transactions?</string>
    <string name="delete">Delete</string>
    <string name="delete_customer_confirmation">Are you sure you want to delete this customer?</string>
    <string name="all_transactions_deleted">All transaxtions deleted</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="delete_transaction_confirmation">Are you sure you want to delete this transaction?</string>
    <string name="transaction_deleted">Transaction deleted</string>

    <string name="delete_all_data">Delete all data</string>
    <string name="required">*required</string>
    <string name="optional">optional</string>
    <string name="given">Given</string>
    <string name="taken">Taken</string>
    <string name="you_will_pay">You will pay</string>
    <string name="they_will_pay">They will pay</string>
    <string name="balance_label">Balance</string>
    <string name="are_you_sure_you_want_to_delete_all_customers_and_transactions_this_action_cannot_be_undone">Are you sure you want to delete all customers and transactions? </string>
</resources>